crates/aranya-policy-lang/tests/data/invalid_this/use_name.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Reserved identifier
  |
1 | use this
  |     ^^^^ this
